--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,10 @@ filelock==3.0.12
 Flask==2.0.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
+MarkupSafe==2.0.1
+mysql-connector-python==8.0.25
 protobuf==3.17.3
+rsa-id-number==0.0.3
 six==1.16.0
 virtualenv==20.4.7
 Werkzeug==2.0.1
-
-requests~=2.25.1
