--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,11 @@ distlib==0.3.2
 env==0.1.0
 filelock==3.0.12
 Flask==2.0.1
+gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
-protobuf==3.17.3
+protobuf==3.17.3git s
 six==1.16.0
 virtualenv==20.4.7
 Werkzeug==2.0.1
-
-requests~=2.25.1
