--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
-protobuf==3.17.3git s
+protobuf==3.17.3
 six==1.16.0
 virtualenv==20.4.7
 Werkzeug==2.0.1
